--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Byte-compiled / optimized / DLL files
+
 __pycache__/
 *.py[cod]
 *$py.class
@@ -99,3 +100,7 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+#self
+
+.idea
